Implementadas las habilidades, mejoradas las vistas correspondientes. Arreglados estilos.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -27,6 +27,7 @@ img.background {
 }
 .page-header {
     margin-top: 0;
+    border: none;
 }
 .page-header, .jumbotron > hr {
     border-color: white;
