--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -18,21 +18,20 @@
                         <li>Comienza la Temporada 7.</li>
                         <li>Se ha reducido a la mitad el coste de maná de todos los <span class="label label-extra">Hechizos</span> (aunque los que no sean de tu color seguirán costando el doble).</li>
                         <li>Se ha eliminado el tope de nivel 5 de magia. Ahora, por cada 4 <span class="label label-extra">Hechizos</span> cualesquiera que tengas completamente investigados, aumentarás en 1 tu nivel de magia.</li>
-                        <li>Se ha reducido el bonus de facción en combate (de 100% a 50%).</li>
-                        <li>Se ha reducido el bonus de unidad en combate (de 100% a 50%).</li>
-                        <li>Ahora algunas tropas tienen <span class="label label-extra">Habilidades</span> especiales en combate. Se especifican tanto en la ayuda (antes ponía "Ninguna" en el pie de tarjeta), como en la descripción (en los casos en los que los pies de tarjeta necesitan usarse para otra información):
+                        <li>Se ha reducido el <span class="label label-extra">Bonus de Facción</span> en combate (de 100% a 50%).</li>
+                        <li>Se ha reducido el <span class="label label-extra">bonus de Unidad</span> en combate (de 100% a 50%).</li>
+                        <li>Ahora algunas tropas tienen <span class="label label-extra">Habilidades</span> especiales en combate:
                             <ul>
-                                <li><span class="label label-extra">Contraataque</span>, ataca en respuesta cada vez que es atacada.</li>
-                                <li><span class="label label-extra">Regeneración</span>, resucita el 25% de sus unidades muertas tras el combate.</li>
-                                <li><span class="label label-extra">Prisa</span>, ataca primero en un enfrentamiento.</li>
-                                <li><span class="label label-extra">Dureza</span>, duplica su defensa base en combate.</li>
-                                <li><span class="label label-extra">Evadir</span>, tiene un 20% probabilidad de evadir completamente el ataque.</li>
+                                <li><span class="label label-warning">Regeneración</span>, resucita un 25% de sus unidades muertas tras el combate.</li>
+                                <li><span class="label label-info">Desvanecer</span>, tiene un 25% probabilidad de evadir completamente un ataque.</li>
+                                <li><span class="label label-primary">Escamas</span>, reduce en un 25% los daños sufridos en combate.</li>
+                                <li><span class="label label-danger">Contraataque</span>, devuelve un 25% de los daños sufridos en un ataque.</li>
+                                <li><span class="label label-success">Prisa</span>, siempre ataca primero en un enfrentamiento.</li>
                             </ul>
                         </li>
-                        <li>Nuevo edificio, las <span class="label label-extra">Minas</span>, que aumentan en un % la cantidad de recursos brutos obtenidos al turno.</li>
-                        <li>Ahora hay 3 tipos de ataques, con diferentes consecuencias si resulta victorioso:
+                        <li>Ahora hay 3 tipos de ataques, con diferentes consecuencias en caso de victoria aplastante:
                             <ul>
-                                <li><span class="label label-extra">Conquista</span>: Roba un 5% de las <span class="label label-extra">Tierras</span> enemigas.</li>
+                                <li><span class="label label-extra">Conquista</span>: Anexa un 5% de las <span class="label label-extra">Tierras</span> enemigas a tu reino.</li>
                                 <li><span class="label label-extra">Pillaje</span>: Roba un 5% del <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos, además de un <span class="label label-artifact">Artefacto</span>.</li>
                                 <li><span class="label label-extra">Asedio</span>: Destruye un 10% de las <span class="label label-extra">Tierras</span>, <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos.</li>
                             </ul>
@@ -48,12 +47,12 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 6.</li>
-                        <li>Se ha duplicado el bonus de experiencia de los héroes por combate ganado (de 25 a 50).</li>
-                        <li>Se ha duplicado el coste base de investigación de todos los hechizos (de 50 a 100 turnos por nivel).</li>
-                        <li>Se ha duplicado la duración base de todos los encantamientos (de 50 a 100 turnos por nivel).</li>
+                        <li>Se ha duplicado el bonus de experiencia de los <span class="label label-extra">Héroes</span> por combate ganado (de 25 a 50).</li>
+                        <li>Se ha duplicado el coste base de investigación de todos los <span class="label label-extra">Hechizos</span> (de 50 a 100 turnos por nivel).</li>
+                        <li>Se ha duplicado la duración base de todos los <span class="label label-extra">Encantamientos</span> (de 50 a 100 turnos por nivel).</li>
                         <li>Se ha duplicado la duración de todas las subastas (de 1h a 2h).</li>
-                        <li>Se ha quintuplicado el bonus de facción en combate (de 20% a 100%).</li>
-                        <li>Se ha quintuplicado el bonus de unidad en combate (de 20% a 100%).</li>
+                        <li>Se ha quintuplicado el <span class="label label-extra">Bonus de Facción</span> en combate (de 20% a 100%).</li>
+                        <li>Se ha quintuplicado el <span class="label label-extra">Bonus de Uacción</span> en combate (de 20% a 100%).</li>
                         <li>Se ha duplicado la cantidad de tropas de todos los Dioses (de 100 a 200 <span class="label label-extra">Dragones</span>).</li>
                         <li>Se ha duplicado el bonus de <span class="label label-legendary">Anillo Invocador</span>, <span class="label label-legendary">Anillo Avaricioso</span>, <span class="label label-legendary">Anillo Encantador</span> y <span class="label label-legendary">Anillo Poderoso</span> (de 10% a 20%).</li>
                         <li>Se han eliminado del juego a los Jinetes del Apocalipsis. Ahora, cuando los Dioses se queden sin tropas, lanzarán el <span class="label label-extra">Apocalipsis</span>, y los jugadores tendrán alrededor de una semana para luchar por la primera posición del ranking, como viene siendo habitual.</li>
@@ -96,7 +95,7 @@
                         <li>Se han reducido costes de turnos del Templo, la Alquimia y las Aventuras.</li>
                         <li>Ahora hay bots!</li>
                         <li>Ahora los <span class="label label-extra">Hechizos</span> comprados en subasta deben ser investigados de forma normal, por lo que los <span class="label label-extra">Gremios</span> seguirán siendo útiles. En compensación, se ha reducido el coste inicial de oro en subasta.</li>
-                        <li>Ahora todas las imágenes e iconos son libres y gratuitos!</li>
+                        <li>Ahora todas las imágenes e iconos son libres y gratuit@s!</li>
                         <li>Se ha reducido el tamaño de muchas imágenes para agilizar la carga de la web en dispositivos móviles.</li>
                     </ul>
                 </div>
@@ -152,7 +151,7 @@
                                 <li><span class="label label-extra">Cuerno de Guerra</span>, invoca <span class="label label-extra">Humanos</span>.</li>
                                 <li><span class="label label-extra">Demonio Embotellado</span>, renombrado de <span class="label label-extra">Calavera Maldita</span>.</li>
                                 <li><span class="label label-extra">Barril de Pólvora</span>, ahora destruye un 3% de todos los <span class="label label-extra">Edificios</span> enemigos.</li>
-                                <li><span class="label label-extra">Tela de Araña</span>, -1 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
+                                <li><span class="label label-extra">Tela de Araña</span>, -2 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
                             </ul>
                         </li>
                         <li>Se han añadido los siguientes Héroes:
@@ -203,11 +202,11 @@
                         <li>Se ha eliminado el Artefacto <span class="label label-extra">Reloj de Arena</span>.</li>
                         <li>Se ha agregado el Artefacto <span class="label label-extra">Agua Bendita</span>.</li>
                         <li>Se ha eliminado la reducción de recursos del Hechizo <span class="label label-extra">Apocalipsis</span>, pero se ha incrementado su coste de mantenimiento y su coste de Maná al conjurarlo.</li>
-                        <li>Se ha aumentado el número de turnos necesarios para ganar con "Apocalipsis" de 600 a 900.</li>
-                        <li>Se han ajustado valores de % bonus de muchos Héroes, Hechizos y Encantamientos.</li>
-                        <li>Se ha modificado el sistema de combate. Ahora la superioridad en velocidad otorga un bonus de ataque del 5% por punto, en lugar de atacar primero, por lo que no es tan obligatoria como en versiones anteriores.</li>
-                        <li>Se ha cambiado el sistema de subasta de puja en el úñtimo segundo a puja máxima con sobrepuja automática tipo eBay.</li>
-                        <li>Se han eliminado los Hechizos de nivel 5 de la subasta.</li>
+                        <li>Se ha aumentado el número de turnos necesarios para ganar con <span class="label label-extra">Apocalipsis</span> de 600 a 900.</li>
+                        <li>Se han ajustado valores de % bonus de muchos <span class="label label-extra">Héroes</span>, <span class="label label-extra">Hechizos</span> y <span class="label label-extra">Encantamientos</span>.</li>
+                        <li>Se ha modificado el sistema de combate. Ahora, la superioridad en velocidad otorga un bonus de ataque del 5% por punto, en lugar de atacar primero, por lo que no es tan obligatoria como en versiones anteriores.</li>
+                        <li>Se ha cambiado el sistema de subasta de puja en el último segundo a puja máxima con sobrepuja automática tipo eBay.</li>
+                        <li>Se han eliminado los <span class="label label-extra">Hechizos</span> de nivel 5 de la subasta.</li>
                         <li>Se ha duplicado el bonus de defensa de las <span class="label label-extra">Fortalezas</span> y <span class="label label-extra">Barreras</span>.</li>
                     </ul>
                 </div>
