--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -51,7 +51,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ troop.unit.family.name }}</span></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ troop.unit.type.name }}</span></div>
                             {# row #}
-                            {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if troop.unit.skill %}<span data-toggle="tooltip" data-placement="top" title="{{ troop.unit.skill.description }}">{{ troop.unit.skill.name }}</span>{% else %}<span data-toggle="tooltip" data-placement="top" title="Esta tropa no tiene habilidad especial">Ninguna</span>{% endif %}</div>
                             {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ troop.unit.lore }}</i></small></div>
                         </div>
