Implementadas todas las funcionalidades del parche 1.7 excepto la evasion de los ataques.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,24 +16,26 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 7.</li>
+                        <li>Ahora los hechizos totalmente investigados acumulan poder para tu Reino.</li>
                         <li>Se ha reducido a la mitad el coste de maná de todos los <span class="label label-extra">Hechizos</span> (aunque los que no sean de tu color seguirán costando el doble).</li>
-                        <li>Se ha eliminado el tope de nivel 5 de magia. Ahora, por cada 4 <span class="label label-extra">Hechizos</span> cualesquiera que tengas completamente investigados, aumentarás en 1 tu nivel de magia.</li>
+                        <li>Se han reducido muchos bonuses de <span class="label label-extra">Hechizos</span>, pero ahora se ha eliminado el tope de nivel 5 de magia.</li>
+                        <li>Se han reducido muchos bonuses de <span class="label label-extra">Héroes</span>, pero ahora los <span class="label label-extra">Héroes</span> de tu mismo color duplicarán sus bonuses por nivel.</li>
                         <li>Se ha reducido el <span class="label label-extra">Bonus de Facción</span> en combate (de 100% a 50%).</li>
-                        <li>Se ha reducido el <span class="label label-extra">bonus de Unidad</span> en combate (de 100% a 50%).</li>
+                        <li>Se ha reducido el <span class="label label-extra">Bonus de Unidad</span> en combate (de 100% a 50%).</li>
                         <li>Ahora algunas tropas tienen <span class="label label-extra">Habilidades</span> especiales en combate:
                             <ul>
-                                <li><span class="label label-warning">Regeneración</span>, resucita un 25% de sus unidades muertas tras el combate.</li>
-                                <li><span class="label label-info">Desvanecer</span>, tiene un 25% probabilidad de evadir completamente un ataque.</li>
-                                <li><span class="label label-primary">Escamas</span>, reduce en un 25% los daños sufridos en combate.</li>
-                                <li><span class="label label-danger">Contraataque</span>, devuelve un 25% de los daños sufridos en un ataque.</li>
-                                <li><span class="label label-success">Prisa</span>, siempre ataca primero en un enfrentamiento.</li>
+                                <li><span class="label label-extra">Regeneración</span>, resucita un 25% de sus unidades muertas tras el combate.</li>
+                                <li><span class="label label-extra">Desvanecer</span>, tiene un 25% probabilidad de evadir completamente un ataque.</li>
+                                <li><span class="label label-extra">Escamas</span>, reduce en un 25% los daños sufridos en un ataque.</li>
+                                <li><span class="label label-extra">Locura</span>, aumenta un 25% de los daños inflingidos en un ataque.</li>
+                                <li><span class="label label-extra">Prisa</span>, siempre ataca primero en un enfrentamiento.</li>
                             </ul>
                         </li>
-                        <li>Ahora hay 3 tipos de ataques, con diferentes consecuencias en caso de victoria aplastante:
+                        <li>Ahora hay 3 tipos de ataques, con diferentes consecuencias en caso de victoria total:
                             <ul>
-                                <li><span class="label label-extra">Conquista</span>: Anexa un 5% de las <span class="label label-extra">Tierras</span> enemigas a tu reino.</li>
-                                <li><span class="label label-extra">Pillaje</span>: Roba un 5% del <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos, además de un <span class="label label-artifact">Artefacto</span>.</li>
-                                <li><span class="label label-extra">Asedio</span>: Destruye un 10% de las <span class="label label-extra">Tierras</span>, <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos.</li>
+                                <li><span class="label label-extra">Conquista</span>: Anexa un 3% de las <span class="label label-extra">Tierras</span> enemigas a tu reino.</li>
+                                <li><span class="label label-extra">Pillaje</span>: Roba un 6% del <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos, además de una <span class="label label-artifact">Runa</span>.</li>
+                                <li><span class="label label-extra">Asedio</span>: Destruye un 9% de las <span class="label label-extra">Tierras</span>, <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos.</li>
                             </ul>
                         </li>
                     </ul>
