--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.png') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y <span class="label label-extra">Oro</span> en pujar por <span class="label label-extra">Tropas</span>, <span class="label label-artifact">Artefactos</span>, <span class="label label-extra">Héroes</span>, <span class="label label-quest">Mapas</span>, <span class="label label-recipe">Recetas</span> y <span class="label label-extra">Hechizos</span>. Puedes pujar cualquier cantidad, y solo pagarás la puja más alta menos la comisión.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y <span class="label label-extra">Oro</span> en pujar por <span class="label label-extra">Tropas</span>, <span class="label label-artifact">Artefactos</span>, <span class="label label-extra">Héroes</span>, <span class="label label-quest">Mapas</span>, <span class="label label-recipe">Recetas</span> y <span class="label label-extra">Hechizos</span>. Las subastan acaban a las horas pares.</div>
                         </div>
                     </div>
                 </div>
