--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -42,7 +42,7 @@
             <div class="panel panel-default"><a name="intro"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-question-circle"></i>General</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En la desolada pero potencialmente mágica tierra de W&yuml;z&auml;rd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, explorando territorios, construyendo importantes <span class="label label-extra">Edificios</span>, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
+                    <p>En la desolada pero potencialmente mágica tierra de Wyzärd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, explorando territorios, construyendo importantes <span class="label label-extra">Edificios</span>, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
                 </div>
             </div>
             <div class="panel panel-default">
@@ -60,7 +60,7 @@
             <div class="panel panel-default"><a name="subasta"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-legal"></i>Subasta</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Además de los métodos habituales para obtener <span class="label label-extra">Hechizos</span>, <span class="label label-artifact">Artefactos</span> y <span class="label label-extra">Unidades</span>, puedes intentar obtener premios muy poco frecuentes para tu facción en la subasta, como <span class="label label-extra">Héroes</span> o <span class="label label-extra">Hechizos</span> (exceptuando los de nivel 5) de otras facciones. Las subastas terminan a cada hora en punto, y el máximo pujante en ese momento se llevará el premio. Recuerda que no puedes tener más de 5 tipos de <span class="label label-extra">Unidades</span> diferentes, así que si ganas una subasta y no te caben más, se desbandará la nueva tropa automáticamente. Lo mismo ocurre con <span class="label label-extra">Héroes</span> y <span class="label label-extra">Hechizos</span>, ya que no puedes tener duplicados, y los recién adquiridos se descartarán. Si te sobrepujan, se te devolverá el <span class="label label-extra">Oro</span> de tu puja anterior menos un 5% de comisión.</p>
+                    <p>Además de los métodos habituales para obtener <span class="label label-extra">Hechizos</span>, <span class="label label-artifact">Artefactos</span> y <span class="label label-extra">Unidades</span>, puedes intentar obtener premios muy poco frecuentes para tu facción en la subasta, como <span class="label label-extra">Héroes</span> o <span class="label label-extra">Hechizos</span> de otras facciones. Las subastas terminan a cada hora par en punto, y el máximo pujante en ese momento se llevará el premio. Recuerda que no puedes tener más de 5 tipos de <span class="label label-extra">Unidades</span> diferentes, así que si ganas una subasta y no te caben más, se desbandará la nueva tropa automáticamente. Lo mismo ocurre con <span class="label label-extra">Héroes</span> y <span class="label label-extra">Hechizos</span>, ya que no puedes tener duplicados, y los recién adquiridos se descartarán. Si te sobrepujan, se te devolverá el <span class="label label-extra">Oro</span> de tu puja anterior menos un 5% de comisión.</p>
                 </div>
             </div>
             <div class="panel panel-default"><a name="templo"></a>
@@ -91,14 +91,14 @@
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/miscellany/factions.png') }}">
                             <div class="caption">
                                 <h2>Bonus de facción</h2>
-                                <p>Cada facción tiene una opuesta y aumentará su daño en combate un +100% contra ella: <span class="label label-danger">Caos</span> > <span class="label label-success">Naturaleza</span> > <span class="label label-primary">Sagrado</span> > <span class="label label-warning">Oscuridad</span> > <span class="label label-info">Fantasmal</span> > <span class="label label-danger">Caos</span></p>
+                                <p>Cada facción tiene una opuesta y aumentará su daño en combate un +50% contra ella: <span class="label label-danger">Caos</span> > <span class="label label-success">Naturaleza</span> > <span class="label label-primary">Sagrado</span> > <span class="label label-warning">Oscuridad</span> > <span class="label label-info">Fantasmal</span> > <span class="label label-danger">Caos</span></p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/miscellany/units.png') }}">
                             <div class="caption">
                                 <h2>Bonus de unidad</h2>
-                                <p>Cada tipo de unidad tiene un opuesto y aumentará su daño en combate un +100% contra él: <span class="label label-default">Asedio</span> > <span class="label label-default">Distancia</span> > <span class="label label-default">Volador</span> > <span class="label label-default">Magia</span> > <span class="label label-default">Melee</span> > <span class="label label-default">Asedio</span></p>
+                                <p>Cada tipo de unidad tiene un opuesto y aumentará su daño en combate un +50% contra él: <span class="label label-default">Asedio</span> > <span class="label label-default">Distancia</span> > <span class="label label-default">Volador</span> > <span class="label label-default">Magia</span> > <span class="label label-default">Melee</span> > <span class="label label-default">Asedio</span></p>
                             </div>
                         </div>
                     </div>
@@ -108,8 +108,8 @@
                     <p>Si ganas la batalla, normalmente debilitarás a tu contrincante lo suficiente como para reducir su ranking bastantes puestos. Si ganas de forma apastante, obtendrás una recompensa, dependiendo del tipo de ataque que hayas escogido:
                     <ul>
                         <li><span class="label label-extra">Conquista</span>: Roba un 5% de las <span class="label label-extra">Tierras</span> enemigas.</li>
-                        <li><span class="label label-extra">Pillaje</span>: Roba un 5% del <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos, además de un <span class="label label-artifact">Artefacto</span>.</li>
-                        <li><span class="label label-extra">Asedio</span>: Destruye un 10% de las <span class="label label-extra">Tierras</span>, <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos.</li>
+                        <li><span class="label label-extra">Pillaje</span>: Roba un 10% del <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos, además de un <span class="label label-artifact">Artefacto</span>.</li>
+                        <li><span class="label label-extra">Asedio</span>: Destruye un 5% de las <span class="label label-extra">Tierras</span>, <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos.</li>
                     </ul>
                     Además, tus <span class="label label-extra">Héroes</span> ganarán 50 de <span class="label label-extra">Experiencia</span>. Sin embargo, si pierdes el ataque, no ganarás absolutamente nada, y probablemente quedarás expuesto a futuras represalias. No puedes atacar al mismo mago 2 veces en menos de 12h, ni puedes atacar a un mago un 20% más débil que tú o un 80% más fuerte que tú. No obstante, si alguien te ataca, tendrás derecho a un contraataque, independientemente de las anteriores condiciones.</p>
                     <p>Los Dioses son jugadores NPC no controlados, con una defensa altísima y un ejército impresionante, que normalmente nadie podría derrotar. Pero tal vez a base de muchos ataques especiales y coordinados, podáis igualar e incluso superar a estos gigantes de la magia, y ganar con ello una enorme recompensa. Además, es necesario para la última fase del juego.</p>
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center text-responsive">
-                    <i class="fa fa-fw fa-joomla"></i>{% if unit.skill %}<span data-toggle="tooltip" data-placement="top" title="{{ unit.skill.description }}">{{ unit.skill.name }}</span>{% else %}<span data-toggle="tooltip" data-placement="top" title="Esta tropa no tiene habilidad especial">Ninguna</span>{% endif %}
+                    <i class="fa fa-fw fa-joomla"></i>{% if unit.skill %}<span class="label label-extra" data-toggle="tooltip" data-placement="top" title="{{ unit.skill.description }}">{{ unit.skill.name }}</span>{% else %}<span data-toggle="tooltip" data-placement="top" title="Esta tropa no tiene habilidad especial">Ninguna habilidad</span>{% endif %}
                 </div>
                 {# TAGS FOR SEARCH #}
                 <span class="hidden">Unidades, Tropas, {{ unit.faction.name }}</span>
