--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -68,7 +68,7 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for construction in player.constructions %}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-industry"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span> {{ construction.quantity|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-industry"></i><span class="label label-extra" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ construction.building.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span> {{ construction.quantity|nf }}</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for enchantment in player.enchantmentsVictim %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> [{{ enchantment.owner.magic }}] ({{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration * enchantment.owner.magic)|nf }})</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ enchantment.spell.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> [{{ enchantment.owner.magic }}] ({{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration * enchantment.owner.magic)|nf }})</div>
                             {% else %}
                             <div class="col-xs-12">Ningún encantamiento en tu Reino</div>
                             {% endfor %}
@@ -113,7 +113,7 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for troop in player.troops %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ troop.unit.attack|nf }}, {{ troop.unit.defense|nff }}, {{ troop.unit.speed|nf }}, {{ troop.unit.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
                             {% else %}
                             <div class="col-xs-12">Ninguna tropa en tu Reino</div>
                             {% endfor %}
@@ -137,7 +137,7 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for contract in player.contracts %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span> [<i class="fa fa-fw fa-star"></i>{{ contract.level|nf }}] ({{ contract.experience }}/{{ contract.hero.experience * contract.level }})</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ contract.hero.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span> [<i class="fa fa-fw fa-star"></i>{{ contract.level|nf }}] ({{ contract.experience }}/{{ contract.hero.experience * contract.level }})</div>
                             {% else %}
                             <div class="col-xs-12">Ningún héroe en tu Reino</div>
                             {% endfor %}
@@ -162,8 +162,8 @@
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12"><i class="fa fa-fw fa-shield"></i>{{ player.armyDefense|nf }}/75 % <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Probabilidad de que el enemigo falle al atacarte, aumenta con las Fortalezas y algunos Encantamientos">Defensa Física</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-chain-broken"></i>{{ player.magicDefense|nf }}/75 % <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Probabilidad de que el enemigo falle al hechizarte o activar artefactos, aumenta con las Barreras y algunos Encantamientos">Defensa Mágica</span></div>
-                            <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><span class="label label-{{ player.research.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}" class="link">{{ player.research.spell.name }}</a></span>{% else %}Ningún hechizo en defensa{% endif %}</div>
-                            <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><span class="label label-{{ player.item.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.item.artifact.name|slug }}" class="link">{{ player.item.artifact.name }}</a></span>{% else %}Ningún artefacto en defensa{% endif %}</div>
+                            <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><span class="label label-{{ player.research.spell.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ player.research.spell.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}" class="link">{{ player.research.spell.name }}</a></span>{% else %}Ningún hechizo en defensa{% endif %}</div>
+                            <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><span class="label label-{{ player.item.artifact.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ player.research.item.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.item.artifact.name|slug }}" class="link">{{ player.item.artifact.name }}</a></span>{% else %}Ningún artefacto en defensa{% endif %}</div>
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                             </tr>
                             {% for construction in player.constructions %}
                             <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-industry"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span></td>
+                                <td class="text-left"><i class="fa fa-fw fa-industry"></i><span class="label label-extra" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ construction.building.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span></td>
                                 <td class="text-right">{{ construction.quantity|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.power)|nf }}</td>
                                 <td class="text-right">{% if construction.building.armyDefenseRatio > 0 %}{{ (construction.quantity / construction.building.armyDefenseRatio)|nf }}{% else %}0{% endif %}%</td>
@@ -245,7 +245,7 @@
                             {% endfor %}
                             {% for contract in player.contracts %}
                             <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
+                                <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ contract.hero.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
                                 <td class="text-right">{{ contract.level|nf }}</td>
                                 <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
                                 <td class="text-right">{{ contract.level * contract.hero.skill.armyDefenseBonus }}%</td>
@@ -260,7 +260,7 @@
                             {% endfor %}
                             {% for item in player.items if item.artifact.legendary %}
                             <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-diamond"></i><span class="label label-legendary"><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a></span></td>
+                                <td class="text-left"><i class="fa fa-fw fa-diamond"></i><span class="label label-legendary" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ item.artifact.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a></span></td>
                                 <td class="text-right">{{ item.quantity|nf }}</td>
                                 <td class="text-right">{{ item.artifact.power|nf }}</td>
                                 <td class="text-right">{{ item.artifact.skill.armyDefenseBonus|nf }}%</td>
@@ -294,7 +294,7 @@
                             </tr>
                             {% for troop in player.troops %}
                             <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-group"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span></td>
+                                <td class="text-left"><i class="fa fa-fw fa-group"></i><span class="label label-{{ troop.unit.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ troop.unit.skill.description|default('Sin habilidad especial') }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span></td>
                                 <td class="text-right">{{ troop.quantity|nf }}</td>
                                 <td class="text-right">{{ (troop.quantity * troop.unit.power)|nf }}</td>
                                 <td class="text-right">0%</td>
@@ -309,7 +309,7 @@
                             {% endfor %}
                             {% for enchantment in player.enchantmentsVictim %}
                             <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
+                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ enchantment.spell.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
                                 <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">{{ (enchantment.owner.magic * enchantment.spell.skill.armyDefenseBonus)|nf }}%</td>
@@ -324,7 +324,7 @@
                             {% endfor %}
                             {% for enchantment in player.enchantmentsOwner %}
                             <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> a <span class="label label-{{ enchantment.victim.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.victim.id}) }}" class="link">{{ enchantment.victim.nick }}</a></span></td>
+                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}" data-html="true" data-toggle="tooltip" data-placement="top" title="{{ enchantment.spell.skill.description }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> a <span class="label label-{{ enchantment.victim.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.victim.id}) }}" class="link">{{ enchantment.victim.nick }}</a></span></td>
                                 <td class="text-right">{{ player.magic|nf }}</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0%</td>
