Implementado por fin la habilidad esquivar en los combates.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,7 +16,7 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 7.</li>
-                        <li>Ahora los hechizos totalmente investigados acumulan poder para tu Reino.</li>
+                        <li>Ahora los <span class="label label-extra">Hechizos</span> totalmente investigados acumulan poder para tu Reino.</li>
                         <li>Se ha reducido a la mitad el coste de maná de todos los <span class="label label-extra">Hechizos</span> (aunque los que no sean de tu color seguirán costando el doble).</li>
                         <li>Se han reducido muchos bonuses de <span class="label label-extra">Hechizos</span>, pero ahora se ha eliminado el tope de nivel 5 de magia.</li>
                         <li>Se han reducido muchos bonuses de <span class="label label-extra">Héroes</span>, pero ahora los <span class="label label-extra">Héroes</span> de tu mismo color duplicarán sus bonuses por nivel.</li>
