--- a/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
@@ -7,9 +7,10 @@
     <div class="jumbotron text-center">
         {% include "ArchmageUserBundle::logo.html.twig" %}
         <form id="register" name="register" class="form-signin" data-toggle="validator" action="{{ path("fos_user_registration_register") }}" {{ form_enctype(form) }} method="post">
-            <select class="selectpicker" id="faction" name="faction" data-live-search="false" data-style="btn-default btn-lg" title="Escoge una facción" required>
+            <select class="selectpicker form-control" id="faction" name="faction" data-live-search="false" data-style="btn-default btn-lg" required="required">
+            {% set selected = random(4) %}
             {% for faction in factions %}
-                <option value="{{ faction.id }}" data-content="<span class='label label-{{ faction.class }}'>{{ faction.name }}</span>">{{ faction.name }}</option>
+                <option value="{{ faction.id }}" data-content="<span class='label label-{{ faction.class }}'>{{ faction.name }}</span>" {% if loop.index0 == selected %}selected="selected"{% endif %}>{{ faction.name }}</option>
             {% endfor %}
             </select>
             <div class="form-group has-feedback">
