--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,38 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.8b</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 8.</li>
+                        <li>Ahora los <span class="label label-extra">Héroes</span> ya no duplican sus bonuses por nivel, sino que ganan el doble de experiencia en combate si son de tu color.</li>
+                        <li>Ahora la habilidad <span class="label label-extra">Prisa</span> ya no incrementa la velocidad, sino que iguala la velocidad enemiga en un combate para atacar a la vez.</li>
+                        <li>Ahora al intentar lanzar un <span class="label label-extra">Hechizo</span> en batalla, si no pasa las barreras enemigas, no consume maná, como ocurre con los <span class="label label-artifact">Artefactos</span>.</li>
+                        <li>Se han modificado los siguientes <span class="label label-extra">Hechizos</span> de nivel 5:
+                            <ul>
+                                <li><span class="label label-danger">Infierno</span>, ahora destruye un -2% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
+                                <li><span class="label label-info">Tsunami</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
+                                <li><span class="label label-primary">Palabra Santa</span> por <span class="label label-primary">Rayo de Luz</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
+                                <li><span class="label label-success">Rayo de Sol</span> por <span class="label label-success">Enredaderas</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
+                                <li><span class="label label-warning">Eclipse</span> por <span class="label label-warning">Cadena de Relámpagos</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
+                            </ul>
+                        </li>
+                        <li>Se han añadido nuevos <span class="label label-legendary">Artefactos Legendarios</span>:
+                            <ul>
+                                <li><span class="label label-legendary">Amuleto Guerrero</span>, +50 de <span class="label label-extra">Experiencia</span> a tus <span class="label label-extra">Héroes</span> tras un combate.</li>
+                                <li><span class="label label-legendary">Amuleto Erudito</span>, +20% de bonus de <span class="label label-extra">Investigación</span>.</li>
+                                <li><span class="label label-legendary">Amuleto Exótico</span>, +1 <span class="label label-extra">Tierra</span> al <i class="fa fa-fw fa-hourglass-half"></i>.</li>
+                                <li><span class="label label-legendary">Amuleto Rúnico</span>, +1% <span class="label label-artifact">Artefactos</span> encontrados al azar.</li>
+                                <li><span class="label label-legendary">Amuleto Maldito</span>, -20% a todos los <span class="label label-extra">Bonuses</span> de tu Reino.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta abierta</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.7b</div>
                 <div class="panel-body text-responsive">
                     <ul>
